Adicionando arquivos CSS e JS

--- a/contato.html
+++ b/contato.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contato</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -27,5 +28,6 @@
   <footer>
     <p>&copy; 2025 Nosso Site</p>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
