Adicionando estilo e interatividade com CSS e JS

--- a/index.html
+++ b/index.html
@@ -3,25 +3,47 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página Inicial</title>
+  <title>Agência Criativa WebDesign</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Bem-vindo ao nosso site!</h1>
+    <h1>Agência Criativa WebDesign</h1>
     <nav>
       <a href="index.html">Início</a> |
       <a href="sobre.html">Sobre</a> |
       <a href="contato.html">Contato</a>
     </nav>
   </header>
+
   <main>
-    <h2>Conteúdo da Página Inicial</h2>
-    <p>Esta é a página inicial do nosso site colaborativo.</p>
+    <section>
+      <h2>Transformamos ideias em experiências digitais</h2>
+      <p>Somos especialistas em design, tecnologia e inovação. Criamos sites únicos, funcionais e com foco na experiência do usuário.</p>
+    </section>
+
+    <!-- Seção de Notícias -->
+    <section id="noticias">
+      <h2>Últimas Notícias</h2>
+
+      <article>
+        <h3>Parceria com a TechVision</h3>
+        <p>Firmamos uma colaboração estratégica com a TechVision para integrar realidade aumentada aos nossos projetos criativos.</p>
+        <small><em>Publicado em 10/04/2025</em></small>
+      </article>
+
+      <article>
+        <h3>Workshop gratuito de UX Design</h3>
+        <p>Nossa equipe promoverá um workshop exclusivo sobre design de experiência do usuário. Garanta sua vaga gratuita!</p>
+        <small><em>Publicado em 05/04/2025</em></small>
+      </article>
+    </section>
   </main>
+
   <footer>
-    <p>&copy; 2025 Nosso Site</p>
+    <p>&copy; 2025 Agência Criativa WebDesign. Todos os direitos reservados.</p>
   </footer>
+
   <script src="script.js"></script>
 </body>
 </html>
