--- a/sobre.html
+++ b/sobre.html
@@ -3,24 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sobre</title>
+  <title>Sobre - Agência Criativa WebDesign</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Sobre Nós</h1>
+    <h1>Agência Criativa WebDesign</h1>
     <nav>
       <a href="index.html">Início</a> |
       <a href="sobre.html">Sobre</a> |
       <a href="contato.html">Contato</a>
     </nav>
   </header>
+
   <main>
-    <h2>Quem Somos</h2>
-    <p>Somos uma equipe colaborativa que cria sites inovadores.</p>
+    <section>
+      <h2>Quem Somos</h2>
+      <p>Somos uma equipe apaixonada por design, tecnologia e inovação. Atuamos no mercado há mais de 10 anos, entregando soluções criativas e funcionais para nossos clientes.</p>
+    </section>
+
+    <!-- Seção de Serviços -->
+    <section id="servicos">
+      <h2>Nossos Serviços</h2>
+      <ul>
+        <li><strong>Criação de Sites Responsivos</strong> – Sites modernos e adaptáveis a qualquer dispositivo.</li>
+        <li><strong>Design de Interfaces (UI)</strong> – Interfaces intuitivas e visualmente atrativas.</li>
+        <li><strong>Experiência do Usuário (UX)</strong> – Foco total na usabilidade e satisfação do usuário.</li>
+        <li><strong>Branding e Identidade Visual</strong> – Construção de marcas fortes e memoráveis.</li>
+        <li><strong>Consultoria Criativa</strong> – Acompanhamento estratégico para potencializar sua presença digital.</li>
+      </ul>
+    </section>
   </main>
+
   <footer>
-    <p>&copy; 2025 Nosso Site</p>
+    <p>&copy; 2025 Agência Criativa WebDesign. Todos os direitos reservados.</p>
   </footer>
   <script src="script.js"></script>
 </body>
