--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
   <header>
-    <h1>Agência Criativa WebDesign</h1>
-    <nav>
-      <a href="index.html">Início</a> |
-      <a href="sobre.html">Sobre</a> |
-      <a href="contato.html">Contato</a>
-    </nav>
+    <div class="navbar">
+      <h1 class="logo">Agência Criativa WebDesign</h1>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="sobre.html">Sobre</a>
+        <a href="contato.html">Contato</a>
+      </nav>
+    </div>
   </header>
 
   <main>
@@ -41,7 +43,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Agência Criativa WebDesign. Todos os direitos reservados.</p>
+    <p>&copy; 2025 Agência Criativa WebDesign.</p>
   </footer>
 
   <script src="script.js"></script>
