--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 
   <main>
     <section>
+      <h1>Olá! Bem-vindo ao nosso projeto</h1>
+    <p>Este site foi feito por uma equipe que desenvolve páginas web com foco em responsividade, ou seja, que funcionam bem tanto no computador quanto no celular. Nossa missão é tornar a navegação mais fácil, leve e acessível para todos os tipos de usuários.</p>
+  </section>
       <h2>Transformamos ideias em experiências digitais</h2>
       <p>Somos especialistas em design, tecnologia e inovação. Criamos sites únicos, funcionais e com foco na experiência do usuário.</p>
     </section>
