--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <section>
       <h2>Transformamos ideias em experiências digitais</h2>
       <p>Somos especialistas em design, tecnologia e inovação. Criamos sites únicos, funcionais e com foco na experiência do usuário.</p>
+        <p style="margin-top: 150px;"></p>
     </section>
 
     <!--Seção de Notícias-->
