--- a/contato.html
+++ b/contato.html
@@ -29,21 +29,23 @@
     <!--Mapa de Localização-->
     <section id="mapa">
         <h2>Onde Estamos</h2>
-        <p>Avenida Beira Mar, 1000 – Fortaleza, CE</p>
+        <p>Rua Poeta Lauro Menezes, 949 – Centro, Tianguá, CE</p>
         <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15917.676325624736!2d-38.52265043823847!3d-3.7192222518202847!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c748574ef1fd6f%3A0xe9ab0a0885f13d6f!2sAv.%20Beira%20Mar%2C%20Fortaleza%20-%20CE!5e0!3m2!1spt-BR!2sbr!4v1713543171812!5m2!1spt-BR!2sbr"
-          width="100%"
-          height="450"
-          style="border:0;"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15917.676325624736!2d-40.99465043823847!3d-3.7192222518202847!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c748574ef1fd6f%3A0xe9ab0a0885f13d6f!2sRua%20Poeta%20Lauro%20Menezes%2C%20949%20-%20Centro%2C%20Tiangu%C3%A1%20-%20CE%2C%2062320-000!5e0!3m2!1spt-BR!2sbr!4v1713543171812!5m2!1spt-BR!2sbr"
+        width="100%"
+        height="450"
+        style="border:0;"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+      
+        <p style="margin-top: 150px;"></p>
       </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Agência Criativa WebDesign. Todos os direitos reservados.</p>
+    <p>&copy; 2025 Agência Criativa WebDesign.</p>
   </footer>
   <script src="script.js"></script>
 </body>
