--- a/sobre.html
+++ b/sobre.html
@@ -34,11 +34,12 @@
         <li><strong>Branding e Identidade Visual</strong> – Construção de marcas fortes e memoráveis.</li>
         <li><strong>Consultoria Criativa</strong> – Acompanhamento estratégico para potencializar sua presença digital.</li>
       </ul>
+      <p style="margin-top: 150px;"></p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Agência Criativa WebDesign. Todos os direitos reservados.</p>
+    <p>&copy; 2025 Agência Criativa WebDesign.</p>
   </footer>
   <script src="script.js"></script>
 </body>
