Atualizações de informações

--- a/sobre.html
+++ b/sobre.html
@@ -21,11 +21,8 @@
   <main>
     <section>
       <h2>Quem Somos</h2>
-      <p>Somos uma equipe apaixonada por design, tecnologia e inovação. Atuamos no mercado há mais de 10 anos, entregando soluções criativas e funcionais para nossos clientes.</p>
-    </section>
-
-    <h2>Nossa Equipe</h2>
-    <p>Somos estudantes e desenvolvedores com interesse em criar soluções web simples e funcionais. Cada pessoa do grupo traz um conhecimento diferente, e juntos conseguimos construir sites que se adaptam a várias necessidades, sempre buscando melhorar com base em testes e feedbacks.</p>
+      <p>Somos desenvolvedores comprometidos em criar soluções web simples, funcionais e adaptadas às necessidades de cada projeto. Valorizamos a colaboração, unindo diferentes habilidades para construir experiências digitais eficientes. Com foco em design, tecnologia e inovação, buscamos sempre aprimorar nosso trabalho, entregando soluções criativas e funcionais para nossos clientes.</p>
+  
     </section>
     <!--Seção de Serviços-->
     <section id="servicos">
