--- a/index.html
+++ b/index.html
@@ -20,11 +20,8 @@
 
   <main>
     <section>
-      <h1>Olá! Bem-vindo ao nosso projeto</h1>
-    <p>Este site foi feito por uma equipe que desenvolve páginas web com foco em responsividade, ou seja, que funcionam bem tanto no computador quanto no celular. Nossa missão é tornar a navegação mais fácil, leve e acessível para todos os tipos de usuários.</p>
-  </section>
-      <h2>Transformamos ideias em experiências digitais</h2>
-      <p>Somos especialistas em design, tecnologia e inovação. Criamos sites únicos, funcionais e com foco na experiência do usuário.</p>
+      <h2>Olá! Bem-vindo à nossa plataforma</h2>
+    <p>Este site foi desenvolvido por uma equipe focada em criar páginas web responsivas — que funcionam bem em qualquer dispositivo, seja computador ou celular. Nossa missão é tornar a navegação mais fácil, leve e acessível para todos os tipos de usuários.</p>
         <p style="margin-top: 150px;"></p>
     </section>
 
