Adição da galeria à página inicial

--- a/index.html
+++ b/index.html
@@ -38,6 +38,28 @@
         <small><em>Publicado em 05/04/2025</em></small>
       </article>
     </section>
+
+    <section>
+      <h2> Dê uma olhada nos nossos projetos</h2>
+      <div class="carrossel-container">
+        <button onclick="voltar()" id="voltar"><</button>
+        <div class="carrossel">
+          <div class="slides" id="slides">
+            <img class="slide" src="public/site1.png" alt="Imagem ilustrativa de um site retirada do site Collect Ui">
+            <img class="slide" src="public/site2.png" alt="Imagem ilustrativa de um site retirada do site Collect Ui">
+            <img class="slide" src="public/site3.png" alt="Imagem ilustrativa de um site retirada do site Collect Ui">
+            <img class="slide" src="public/site4.jpg" alt="Imagem ilustrativa de um site retirada do site Collect Ui">
+            <img class="slide" src="public/site5.jpg" alt="Imagem ilustrativa de um site retirada do site Collect Ui">
+          </div>
+        </div>
+        <button onclick="avancar()" id="avancar">></button>
+      </div>
+      <p class="observacao">
+        Obs: Todas as imagens são ilustrativas e foram retiradas do site
+        <a href="https://collectui.com">Collect UI</a>
+      </p>
+
+    </section>
   </main>
 
   <footer>
