Adição da seção de historia

--- a/sobre.html
+++ b/sobre.html
@@ -33,6 +33,24 @@
         <li><strong>Consultoria Criativa</strong> – Acompanhamento estratégico para potencializar sua presença digital.</li>
       </ul>
     </section>
+
+    <section id="historia">
+      <h2>Nossa historia</h2>
+      <p>
+        Há cinco anos, em uma pequena sala com uma mesa emprestada e muito café, nasceu a Agência Criativa WebDesign.
+        Fundada por três amigos apaixonados por tecnologia e design, a empresa começou criando sites para lojas de
+        bairro e artistas locais.
+      </p>
+      <p>
+        No início, cada projeto era um desafio, mas também uma vitrine. Eles apostaram em um diferencial: ouvir de
+        verdade o cliente e transformar ideias em experiências visuais únicas. O boca a boca fez efeito, e logo estavam
+        atendendo clientes de outras cidades (e até de fora do país).
+      </p>
+      <p>
+        Hoje, a Agência Criativa ocupa um andar inteiro em um prédio moderno, mas mantém o espírito de quando tudo
+        começou: criatividade sem limite, café sempre quente, e o desejo de transformar pixels em propósito.
+      </p>
+    </section>
   </main>
 
   <footer>
